# RelicDensity

./: CMakeLists.txt  README.md  RelicDensity  main
includes/: dofHelper.h  legendre_rule.h  matrixelements.h  physicalConstants.h  relic.h  settings.h  thermalAverage.h
src/: dofHelper.cpp  legendre_rule.cpp  main.cpp  matrixelements.cpp  relic.cpp  settings.cpp  thermalAverage.cpp
